--- a/TeachingPlatformApp.csproj
+++ b/TeachingPlatformApp.csproj
@@ -111,6 +111,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\CanvasTrail.cs" />
     <Compile Include="Controls\Flighter.xaml.cs">
       <DependentUpon>Flighter.xaml</DependentUpon>
     </Compile>
@@ -125,6 +126,7 @@
     <Compile Include="Converters\PositionToMarginConverter.cs" />
     <Compile Include="Converters\SetPointsToPathFigureConverter.cs" />
     <Compile Include="Converters\SetPointToRealMarginPointConverter.cs" />
+    <Compile Include="Converters\TrailPointsToPathFigureConverter.cs" />
     <Compile Include="MemoryShare\CLMemory.cs" />
     <Compile Include="MemoryShare\CLStartCamera.cs" />
     <Compile Include="MemoryShare\ZyShareMem.cs" />
