--- a/TeachingPlatformApp.csproj
+++ b/TeachingPlatformApp.csproj
@@ -145,11 +145,13 @@
     <Compile Include="Models\FlighterModel.cs" />
     <Compile Include="Models\HelicopterModel.cs" />
     <Compile Include="Models\MissileModel.cs" />
+    <Compile Include="Models\RouteState.cs" />
     <Compile Include="Models\WswModelInfo.cs" />
     <Compile Include="Models\WswBaseModel.cs" />
     <Compile Include="Speech\ISpeek.cs" />
     <Compile Include="Speech\TeachingSpeeker.cs" />
     <Compile Include="Utils\ClassObjectDeepCloneUtil.cs" />
+    <Compile Include="Utils\CollectionToStringUtil.cs" />
     <Compile Include="Utils\JsonFileConfig.cs" />
     <Compile Include="Utils\MyConsole.cs" />
     <Compile Include="Utils\NumberUtil.cs" />
