--- a/TeachingPlatformApp.csproj
+++ b/TeachingPlatformApp.csproj
@@ -185,6 +185,7 @@
     <Compile Include="WswPlatform\AngleWithLocation.cs" />
     <Compile Include="WswPlatform\DataPacketToWsw.cs" />
     <Compile Include="WswPlatform\DataPacketToWswBuilder.cs" />
+    <Compile Include="WswPlatform\ShowTextCommandHeader.cs" />
     <Compile Include="WswPlatform\VSPFlightVisualCommand.cs" />
     <Compile Include="WswPlatform\PositionCommandBuilder.cs" />
     <Compile Include="WswPlatform\ShowTextCommandBuilder.cs" />
