--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+bin/Debug/log.txt
+bin/Debug/logOnce.txt
+bin/Debug/logOnce.txt
